chore: fix hero buttons on mobile and correct failing CI test

--- a/docs/assets/stylesheets/home.css
+++ b/docs/assets/stylesheets/home.css
@@ -293,6 +293,10 @@ figure {
     .tx-hero h1 {
         font-size: 1.4rem
     }
+
+    .mdx-hero__content {
+        margin-top: 35vh;
+    }
 }
 
 @media screen and (min-width:60em) {
